--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.2",
+    "@chakra-ui/icons": "^1.0.0-next.3",
     "@chakra-ui/theme": "^1.0.0-rc.2",
     "next": "9.5.2",
     "react": "16.13.1",
